# orderly

./: README.md  index.html
.github/workflows/: deploy.yml
assets/: game.core-8FUHVrmV.wasm  game.core-DSdEvgxL.wasm  game.core2-Bzm6Uc16.wasm  index-Bo4APNIN.css  index-CFUvwrHS.js  index-DZsaaPAz.js  index-DgJydlFs.js
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  utils.ts
game/: .gitignore  Cargo.toml
game/bindings/wasm_component/: .gitignore  Cargo.toml
game/bindings/wasm_component/src/: bindings.rs
game/bindings/wasm_component/wit/: world.wit
game/hosts/npm/: .gitignore  package-lock.json  package.json
game/src/: game.rs  lib.rs  shuffled_list.rs
game/src/guest_impl/: game.rs  mod.rs
game/wit/: world.wit
scripts/: build.bat  build.sh
